--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Elijahs Interactive Year 7-8 worksheets for Mathematics, English, and Science with randomized questions and instant feedback">
-    <meta name="keywords" content="education, worksheets, year 7, year 8, maths, english, science, interactive learning">
-    <title>Elijahs Interactive Year 7-8 Worksheets - Adaptive Learning Platform</title>
+    <meta name="keywords" content="elijahs, education, worksheets, year 7, year 8, maths, english, science, interactive learning">
+    <title> Elijahs Interactive Year 7-8 Worksheets - Adaptive Learning Platform</title>
     
     <!-- Preconnect to improve performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
