--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
 <body>
     <div class="container">
         <header class="header" role="banner">
-            <h1>Elijahs Interactive Year 7-8 Worksheets</h1>
+            <h1>Elijahs Interactive Worksheets</h1>
             <p>Unlimited practice with randomized questions!</p>
         </header>
         
